--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, macos-10.15, windows-2019]
-        sofa_branch: [master]
+        sofa_branch: [robosoft2022]
         python_version: ['3.7', '3.8', '3.9', '3.10']
 
     steps:
@@ -167,7 +167,7 @@ jobs:
       - name: Zip artifact and set env vars
         shell: bash
         run: |
-          ARTIFACT_NAME="SOFA-RoboSoft2022_${{ matrix.sofa_branch }}_python-${{ matrix.python_version }}_${{ runner.os }}"
+          ARTIFACT_NAME="SOFA_${{ matrix.sofa_branch }}_python-${{ matrix.python_version }}_${{ runner.os }}"
           mv $SOFA_ROOT $ARTIFACT_NAME
           7z a $ARTIFACT_NAME.zip $ARTIFACT_NAME
           echo "ARTIFACT_NAME=$ARTIFACT_NAME" | tee -a $GITHUB_ENV
