--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,22 +139,33 @@ jobs:
           echo "SoftRobots successfully downloaded and installed in $SoftRobots_INSTALL_DIR"
           echo "--------------------------------------------"
           ls -la $SoftRobots_INSTALL_DIR
+          
+      - name: Download SoftRobots.Inverse_${{ env.RUN_BRANCH }}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}
+        uses: robinraju/release-downloader@v1.3
+        with:
+          repository: 'guparan/SoftRobots.Inverse'
+          tag: 'release-${{ env.RUN_BRANCH }}'
+          fileName: 'SoftRobots.Inverse_${{ env.RUN_BRANCH }}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}.zip'
+          token: '${{ secrets.GUPARAN_RELEASES_TOKEN }}'
 
       - name: Install SoftRobots.Inverse_${{ env.RUN_BRANCH }}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}
         shell: bash
         run: |
           SoftRobotsInverse_INSTALL_DIR="$SOFA_ROOT/plugins/SoftRobots.Inverse"
-          mkdir -p "${{ runner.temp }}/SoftRobots.Inverse_tmp/zip" "${{ runner.temp }}/SoftRobots.Inverse_tmp/binaries" "$SoftRobotsInverse_INSTALL_DIR"
-          url="https://github.com/sofabot/SoftRobots.Inverse/releases/download"
-          url="${url}/release-${RUN_BRANCH}/SoftRobots.Inverse_${RUN_BRANCH}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}.zip"
-          echo "Getting SoftRobots.Inverse from $url"
-          curl --header "Authorization: token ${{ secrets.SOFABOT_RELEASES_TOKEN }}" --output "${{ runner.temp }}/SoftRobots.Inverse_tmp/SoftRobots.Inverse.zip" -L $url
-          unzip -qq "${{ runner.temp }}/SoftRobots.Inverse_tmp/SoftRobots.Inverse.zip" -d "${{ runner.temp }}/SoftRobots.Inverse_tmp/binaries"
-          mv "${{ runner.temp }}"/SoftRobots.Inverse_tmp/binaries/SoftRobots.Inverse_*/* "$SoftRobotsInverse_INSTALL_DIR"
-          echo '--------------------------------------------'
-          echo "SoftRobots.Inverse successfully downloaded and installed in $SoftRobotsInverse_INSTALL_DIR"
-          echo "--------------------------------------------"
-          ls -la $SoftRobotsInverse_INSTALL_DIR
+          
+          ls -la "$WORKSPACE"
+          
+          #mkdir -p "${{ runner.temp }}/SoftRobots.Inverse_tmp/zip" "${{ runner.temp }}/SoftRobots.Inverse_tmp/binaries" "$SoftRobotsInverse_INSTALL_DIR"
+          #url="https://github.com/guparan/SoftRobots.Inverse/releases/download"
+          #url="${url}/release-${RUN_BRANCH}/SoftRobots.Inverse_${RUN_BRANCH}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}.zip"
+          #echo "Getting SoftRobots.Inverse from $url"
+          #curl --header "Authorization: token ${{ secrets.GUPARAN_RELEASES_TOKEN }}" --output "${{ runner.temp }}/SoftRobots.Inverse_tmp/SoftRobots.Inverse.zip" -L $url
+          #unzip -qq "${{ runner.temp }}/SoftRobots.Inverse_tmp/SoftRobots.Inverse.zip" -d "${{ runner.temp }}/SoftRobots.Inverse_tmp/binaries"
+          #mv "${{ runner.temp }}"/SoftRobots.Inverse_tmp/binaries/SoftRobots.Inverse_*/* "$SoftRobotsInverse_INSTALL_DIR"
+          #echo '--------------------------------------------'
+          #echo "SoftRobots.Inverse successfully downloaded and installed in $SoftRobotsInverse_INSTALL_DIR"
+          #echo "--------------------------------------------"
+          #ls -la $SoftRobotsInverse_INSTALL_DIR
 
       - name: Checkout source code
         uses: actions/checkout@v2
