--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04] #, macos-10.15, windows-2019]
+        os: [ubuntu-20.04, macos-10.15, windows-2019]
         sofa_branch: [robosoft2022]
-        python_version: ['3.7'] #, '3.8', '3.9', '3.10']
+        python_version: ['3.7', '3.8', '3.9', '3.10']
 
     steps:
       - name: Set env vars
