--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
           fi
           echo "RUN_BRANCH=$RUN_BRANCH" | tee -a $GITHUB_ENV
           
-          BINARIES_BRANCH="ci_improve_workflow"
+          BINARIES_BRANCH="robosoft2022"
           echo "BINARIES_BRANCH=$BINARIES_BRANCH" | tee -a $GITHUB_ENV
 
       - name: Download-Install the latest SOFA ${{ matrix.sofa_branch }} binaries
@@ -98,7 +98,7 @@ jobs:
         run: |
           SofaPython3_INSTALL_DIR="$SOFA_ROOT/plugins/SofaPython3"
           mkdir -p "${{ runner.temp }}/STLIB_tmp/zip" "${{ runner.temp }}/STLIB_tmp/binaries" "$SofaPython3_INSTALL_DIR"
-          url="https://github.com/guparan/SofaPython3/releases/download"
+          url="https://github.com/sofa-framework/SofaPython3/releases/download"
           url="${url}/release-${BINARIES_BRANCH}/SofaPython3_${BINARIES_BRANCH}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}.zip"
           echo "Getting SofaPython3 from $url"
           curl --output "${{ runner.temp }}/STLIB_tmp/SofaPython3.zip" -L $url
@@ -115,7 +115,7 @@ jobs:
         run: |
           STLIB_INSTALL_DIR="$SOFA_ROOT/plugins/STLIB"
           mkdir -p "${{ runner.temp }}/STLIB_tmp/zip" "${{ runner.temp }}/STLIB_tmp/binaries" "$STLIB_INSTALL_DIR"
-          url="https://github.com/guparan/STLIB/releases/download"
+          url="https://github.com/SofaDefrost/STLIB/releases/download"
           url="${url}/release-${BINARIES_BRANCH}/STLIB_${BINARIES_BRANCH}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}.zip"
           echo "Getting STLIB from $url"
           curl --output "${{ runner.temp }}/STLIB_tmp/STLIB.zip" -L $url
@@ -132,7 +132,7 @@ jobs:
         run: |
           SoftRobots_INSTALL_DIR="$SOFA_ROOT/plugins/SoftRobots"
           mkdir -p "${{ runner.temp }}/SoftRobots_tmp/zip" "${{ runner.temp }}/SoftRobots_tmp/binaries" "$SoftRobots_INSTALL_DIR"
-          url="https://github.com/guparan/SoftRobots/releases/download"
+          url="https://github.com/SofaDefrost/SoftRobots/releases/download"
           url="${url}/release-${BINARIES_BRANCH}/SoftRobots_${BINARIES_BRANCH}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}.zip"
           echo "Getting SoftRobots from $url"
           curl --output "${{ runner.temp }}/SoftRobots_tmp/SoftRobots.zip" -L $url
@@ -147,10 +147,10 @@ jobs:
       - name: Download SoftRobots.Inverse_${{ env.BINARIES_BRANCH }}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}
         uses: robinraju/release-downloader@v1.3
         with:
-          repository: 'guparan/SoftRobots.Inverse'
+          repository: 'SofaDefrost/SoftRobots.Inverse'
           tag: 'release-${{ env.BINARIES_BRANCH }}'
           fileName: 'SoftRobots.Inverse_${{ env.BINARIES_BRANCH }}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}.zip'
-          token: '${{ secrets.GUPARAN_RELEASES_TOKEN }}'
+          #token: '${{ secrets.SOFADEFROST_RELEASES_TOKEN }}'
 
       - name: Install SoftRobots.Inverse_${{ env.BINARIES_BRANCH }}_python-${{ matrix.python_version }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}
         shell: bash
